--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -11,10 +11,10 @@ jobs:
         with:
           root_file: wp.tex
       - name: Set env
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: echo ::set-env name=GITHUB_SHA_SHORT::$(echo $GITHUB_SHA | cut -c 1-6)
       - name: Create Release
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -26,7 +26,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Release Asset
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1.0.1
         env:
