--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -13,6 +13,8 @@ jobs:
       - name: Set env
         if: github.ref == 'refs/heads/main'
         run: echo ::set-env name=GITHUB_SHA_SHORT::$(echo $GITHUB_SHA | cut -c 1-6)
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       - name: Create Release
         if: github.ref == 'refs/heads/main'
         id: create_release
